# alpha_llm

./: .gitignore  .mcp.json  CLAUDE.md  README.md  codeforces_one_per_rating.json  config.py  hf_sync.py  logger.py  pyproject.toml  requirements.txt
data/: __init__.py  dataset.py  prompt_templates.py
evaluation/: __init__.py  code_executor.py  reward.py  test_case_loader.py
logs/: training_log.json
mcts/: __init__.py  kv_cache_pool.py  node.py  search.py  utils.py
model/: __init__.py  alpha_code_model.py  value_head.py
scripts/: run_evaluation.py  run_full_pipeline.py  test_logging.py
training/: __init__.py  replay_buffer.py  self_play.py  trainer.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothCPOTrainer.py  UnslothGKDTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  unsloth_compiled_module_qwen3_5.py  unsloth_compiled_module_siglip.py
