[project]
name = "alpha-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "peft>=0.7.0",
    "rich>=13.0.0",
    "torch>=2.0.0",
    "transformers>=4.45.0",
]
